Legal Case Capture/LegalCaseMgmtMVP/force-app/main/default/objects/LegalCase__c/LegalCase__c.object-meta.xml
<CustomObject>
    <label>Legal Case</label>
    <pluralLabel>Legal Cases</pluralLabel>
    <nameField>
        <label>Case Number</label>
        <type>AutoNumber</type>
        <displayFormat>CASE-{0000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>