Legal Case Capture/LegalCaseMgmtMVP/force-app/main/default/objects/LegalCase__c/fields/BoxFolderLink__c.field-meta.xml
<CustomField>
    <fullName>BoxFolderLink__c</fullName>
    <label>Box Folder Link</label>
    <type>Url</type>
</CustomField>