Legal Case Capture/LegalCaseMgmtMVP/force-app/main/default/objects/LegalCase__c/fields/DistrictFiled__c.field-meta.xml
<CustomField>
    <fullName>DistrictFiled__c</fullName>
    <label>District Filed</label>
    <type>Text</type>
    <length>255</length>
</CustomField>