Legal Case Capture/LegalCaseMgmtMVP/force-app/main/default/objects/LegalCase__c/fields/LeadAttorney__c.field-meta.xml
<CustomField>
    <fullName>LeadAttorney__c</fullName>
    <label>Lead Attorney</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>LeadAttorneyLegalCases</relationshipName>
</CustomField>