Legal Case Capture/LegalCaseMgmtMVP/force-app/main/default/objects/LegalCase__c/fields/SupportStaff__c.field-meta.xml
<CustomField>
    <fullName>SupportStaff__c</fullName>
    <label>Support Staff</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>SupportStaffLegalCases</relationshipName>
</CustomField>